# my_tracker

./: default.nix  mytracker.cabal  mytracker.db  mytracker.sql
data/site1/: page1.html  page2.html
data/site2/: page1.html  page2.html
src/: mytracker.hs
