name:               mytracker
version:            0.1
license:            BSD3
build-type:         Simple
cabal-version:      >=1.10

executable mytracker
  main-is:            mytracker.hs
  hs-source-dirs:     src
  default-language:   Haskell2010
  build-depends:      aeson, base, clay, lucid, mtl, scotty, sqlite-simple, text, wai-extra, wai-cors

